--- a/style.css
+++ b/style.css
@@ -131,10 +131,6 @@ form {
 }
 form {margin-left:15px;}
 
-#menu{
-    margin-left: 20px;
-}
-
 #menu ul{
     list-style-type: none;
 }
@@ -155,5 +151,14 @@ form {margin-left:15px;}
 }
 
 #menu .active{
-    color: black;
+    font-weight: bold;
+}
+
+#form{
+    margin-top: 20px;
+}
+#form label{
+    clear: left;
+	float: left;
+	width: 80px;
 }
