--- a/style.css
+++ b/style.css
@@ -157,14 +157,14 @@ form {margin-left:15px;}
 #form{
     margin-top: 20px;
 }
-#form label {
+.form label {
 	display: block;
 	margin-bottom: -1em;
 }
 
-#form input {
+.form input {
 	display: block;
 	position: relative;
-	left: 10em;
+	left: 11em;
 	top: -0.5em;
 }
