--- a/style.css
+++ b/style.css
@@ -154,9 +154,10 @@ form {margin-left:15px;}
     font-weight: bold;
 }
 
-#form{
-    margin-top: 20px;
+.form{
+    padding-top: 20px;
 }
+
 .form label {
 	display: block;
 	margin-bottom: -1em;
@@ -167,4 +168,12 @@ form {margin-left:15px;}
 	position: relative;
 	left: 11em;
 	top: -0.5em;
+}
+
+#left{
+    float: left;
+}
+
+#right{
+    float: right;
 }
