--- a/style.css
+++ b/style.css
@@ -170,6 +170,13 @@ form {margin-left:15px;}
 	top: -0.5em;
 }
 
+.form .input{
+    display: block;
+	position: relative;
+	left: 11em;
+	top: -0.5em;
+}
+
 #left{
     float: left;
 }
