--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ cursor: pointer;
     padding: 5px;
     background-color: white;
     border: 2px #2191c0 solid;
+    margin-left: 17px;
 }
 #specListDiv li
 {
