--- a/style.css
+++ b/style.css
@@ -69,7 +69,23 @@ cursor: pointer;
 .name a:visited{
     color: #006388;
 }
-
+.errorJava
+{
+opacity:    0.8; 
+  background: #000; 
+  width:      100%;
+  height:     100%; 
+  z-index:    10;
+  top:        0; 
+  left:       0; 
+  position:   fixed; 
+}
+.errorJavaCenter
+{
+   opacity:    1; 
+   margin-left: 30%;
+   display:block;
+}
 .name a:hover{
     text-decoration: none;
 }
